--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.8.2"
 authors = ["Jack O'Connor <oconnor663@gmail.com>", "Samuel Neves"]
 description = "the BLAKE3 hash function"
 repository = "https://github.com/BLAKE3-team/BLAKE3"
-license = "CC0-1.0 OR Apache-2.0 OR Apache-2.0 WITH LLVM-exception"
+license = "CC0-1.0 OR Apache-2.0 OR (Apache-2.0 WITH LLVM-exception)"
 documentation = "https://docs.rs/blake3"
 readme = "README.md"
 edition = "2021"
