build(cmake): Use tbb32 pkgconfig package on 32-bit builds

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -240,7 +240,12 @@ if(BLAKE3_USE_TBB)
       PUBLIC
         BLAKE3_USE_TBB)
   endif()
-  list(APPEND PKG_CONFIG_REQUIRES "tbb >= ${TBB_VERSION}")
+  if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+    set(TBB_PC_NAME tbb)
+  else()
+    set(TBB_PC_NAME tbb32)
+  endif()
+  list(APPEND PKG_CONFIG_REQUIRES "${TBB_PC_NAME} >= ${TBB_VERSION}")
   list(APPEND PKG_CONFIG_CFLAGS -DBLAKE3_USE_TBB)
   include(CheckCXXSymbolExists)
   check_cxx_symbol_exists(_LIBCPP_VERSION "version" BLAKE3_HAVE_LIBCPP)
