Implement pthread parallelism
This implements a simple version of oneapi::tbb::parallel_invoke using
plain pthreads.

The pthread implementation is slightly less performant, but it may be
better suited for light-weight embedded systems than TBB and C++.

Before bifurcating execution, a thread is allocated from a list of free
threads or it is created if the total number of threads is less than the
number of cores on the system.

If there is no thread available, both the left and right subtrees are
processed.

If a thread could be allocated, the thread is given an execution context
for the left subtree and instructed to start execution via a barrier.

The current thread continues to process the right subtree and
synchronises again with the allocated thread via a barrier and returns
it to the list of free threads.

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -19,6 +19,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 option(BLAKE3_USE_TBB "Enable oneTBB parallelism" OFF)
 option(BLAKE3_FETCH_TBB "Allow fetching oneTBB from GitHub if not found on system" OFF)
+option(BLAKE3_USE_PTHREAD "Enable pthread parallelism" OFF)
 
 include(CTest)
 include(FeatureSummary)
@@ -256,6 +257,13 @@ if(BLAKE3_USE_TBB)
   elseif(BLAKE3_HAVE_LIBCPP)
     list(APPEND PKG_CONFIG_LIBS -lc++)
   endif()
+endif()
+
+if(BLAKE3_USE_PTHREAD AND NOT BLAKE3_USE_TBB)
+  find_package(Threads REQUIRED)
+  target_link_libraries(blake3 PRIVATE Threads::Threads)
+  target_compile_definitions(blake3 PUBLIC BLAKE3_USE_PTHREAD)
+  target_sources(blake3 PRIVATE blake3_pthread.c)
 endif()
 
 if(BLAKE3_USE_TBB)
